/*import java.util.ArrayList;

public class Season extends Series{



    private int seasonNumber;
    private ArrayList<Integer> episodeList;

    Season(int seasonNumber, ArrayList<Integer> episodeList){
        super(season, episode);
    }



    public int getSeasonNumber() {
        return seasonNumber;
    }

    public void addEpisodes(String episodeTitle){

    }
    public String toString(){
        return "";
    }
} */